--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,17 @@
 <h1>Hello Angular world!!!</h1>
+<!--<p>{{title}}</p>-->
+<!--<p>{{number - 2}}</p>-->
+<!--<p>{{arr}}</p>-->
+<!--<p>{{obj.b.c}}</p>-->
+<!--<p>{{40+2}}</p>-->
+<!--<p>{{'Hello' + '  world!'}}</p>-->
 
+<img [src] = "img">
+
+<hr/>
 <app-post></app-post>
-<app-post></app-post>
+<!--<app-post></app-post>-->
+
+<hr/>
+
+<app-post4></app-post4>
