--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,12 @@
 <!--<img [src] = "img">-->
 <button (click)="onClick()" >Click me!</button>
 
-<input type="text" (input)="onInput($event)">
+<input
+  type="text"
+  (keyup.enter)= "onInput($event)"
+  (blur)="onBlur(myInput.value)"
+  #myInput
+>
 <p><strong>{{imputValue}}</strong></p>
 
 <hr/>
