--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,16 @@
 <h1>Hello Angular world!!!</h1>
 
-<input type="text" [(ngModel)]="title"  >
+<button (click)="backgroundToggle = !backgroundToggle" >Toggle</button>
 
-<p>{{title}}</p>
+<div [ngStyle]="{
+width: '200px',
+height: '200px',
+borderRadius: '5px',
+border: '2px solid #ccc',
+background: backgroundToggle ? 'red': 'blue'
+}">
+
+</div>
 
 
 
