Директива ngClass part 2 (другий спосіб, для малої кількості класів)

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,11 @@
 .red{
   background: #d46767;
   font-weight: bold;
+  color: #dbfdfd;
 }
 
 .blue{
   background: #6868ad;
   font-size: 1.5rem;
+  color: azure;
 }
