--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,8 +12,11 @@
 
 <!--</div>-->
 
-<p [ngClass]="{
-red: backgroundToggle,
-blue: !backgroundToggle
-}">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, minus.</p>
+<!--<p [ngClass]="{-->
+<!--red: backgroundToggle,-->
+<!--blue: !backgroundToggle-->
+<!--}">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, minus.</p>-->
 
+<p [class.blue]="!backgroundToggle"
+    [class.red]="backgroundToggle"
+>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos, quo.</p>
