--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,6 @@
 <h1>Hello Angular world!!!</h1>
 
-<button (click)="backgroundToggle = !backgroundToggle" >Toggle</button>
+<button (click)="toggle = !toggle" >Toggle</button>
 
-<!--<div [ngStyle]="{-->
-<!--width: '200px',-->
-<!--height: '200px',-->
-<!--borderRadius: '5px',-->
-<!--border: '2px solid #ccc',-->
-<!--background: backgroundToggle ? 'red': 'blue'-->
-<!--}">-->
-
-<!--</div>-->
-
-<!--<p [ngClass]="{-->
-<!--red: backgroundToggle,-->
-<!--blue: !backgroundToggle-->
-<!--}">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, minus.</p>-->
-
-<p [class.blue]="!backgroundToggle"
-    [class.red]="backgroundToggle"
->Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos, quo.</p>
+<p *ngIf="toggle" class="red" >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, qui?</p>
+<p *ngIf="!toggle" class="blue" >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, iusto?</p>
