--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,9 @@
 
 <button (click)="toggle = !toggle" >Toggle</button>
 
-<p *ngIf="toggle" class="red" >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, qui?</p>
-<p *ngIf="!toggle" class="blue" >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, iusto?</p>
+<p *ngIf="toggle; else blueP " class="red" >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, qui?</p>
+
+<ng-template #blueP >
+  <p class="blue" >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, iusto?</p>
+</ng-template>
+
