--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,11 @@
 <h1>Hello Angular world!!!</h1>
 
 <button (click)="toggle = !toggle" >Toggle</button>
+<button (click)="toggle = 111" >Set 111</button>
 
-<p *ngIf="toggle; else blueP " class="red" >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, qui?</p>
-
-<ng-template #blueP >
-  <p class="blue" >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, iusto?</p>
-</ng-template>
+<div [ngSwitch]="toggle" >
+<p *ngSwitchCase="true" class="red" >Lorem ipsum dolor sit amet.</p>
+<p *ngSwitchCase="false" class="blue" >Lorem ipsum dolor sit amet.lorem2 Lorem ipsum. </p>
+<p *ngSwitchDefault >Lorem ipsum.</p>
+</div>
 
