--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,18 @@
 <h1>Hello Angular world!!!</h1>
 
-<button (click)="toggle = !toggle" >Toggle</button>
-<button (click)="toggle = 111" >Set 111</button>
+<ul>
+  <li *ngFor="let n of arr; let idx = index" >
+  {{idx+1}} - <strong>{{n}}</strong>
+  </li>
+</ul>
 
-<div [ngSwitch]="toggle" >
-<p *ngSwitchCase="true" class="red" >Lorem ipsum dolor sit amet.</p>
-<p *ngSwitchCase="false" class="blue" >Lorem ipsum dolor sit amet.lorem2 Lorem ipsum. </p>
-<p *ngSwitchDefault >Lorem ipsum.</p>
-</div>
-
+<ul style="list-style: none">
+<li *ngFor="let post of objs" >
+  <p>{{post.title}}-{{post.author}}</p>
+  <ul>
+    <li *ngFor="let comment of post.comments" >
+      <div>{{comment.name}}-{{comment.text}}</div>
+    </li>
+  </ul>
+</li>
+</ul>
