--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,3 @@
 <h1>Hello Angular world!!!</h1>
 
-<ul>
-  <li *ngFor="let n of arr; let idx = index" >
-  {{idx+1}} - <strong>{{n}}</strong>
-  </li>
-</ul>
-
-<ul style="list-style: none">
-<li *ngFor="let post of objs" >
-  <p>{{post.title}}-{{post.author}}</p>
-  <ul>
-    <li *ngFor="let comment of post.comments" >
-      <div>{{comment.name}}-{{comment.text}}</div>
-    </li>
-  </ul>
-</li>
-</ul>
+<p>{{now | date }}</p>
