--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,5 +1,4 @@
-<div class="post">
+<div class="card">
   <h2>Post title</h2>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto error exercitationem iure quaerat
-    sequi? Commodi culpa cupiditate eveniet quibusdam voluptate.</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit, sequi.</p>
 </div>
