--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<h1>Hello Angular world!!!</h1>
+<div class="container">
+<h1>Angular components</h1>
+  <app-post-form></app-post-form>
+<hr/>
+  <app-post></app-post>
+  <app-post></app-post>
 
-<p>{{now | date }}</p>
+</div>
