--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,9 @@
 <h1>Angular components</h1>
   <app-post-form></app-post-form>
 <hr/>
-  <app-post></app-post>
-  <app-post></app-post>
+  <app-post
+  *ngFor="let p of posts"
+  [post]="p"
+  ></app-post>
 
 </div>
