--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,9 @@
   <app-post
   *ngFor="let p of posts"
   [post]="p"
-  ></app-post>
+  >
+    <small *ngIf="p.text.length > 10; else short" >Post is long</small>
+    <ng-template #short ><small>Post is short</small></ng-template>
+  </app-post>
 
 </div>
