--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <div class="container">
 <h1>Angular components</h1>
+
+  <h2>Subheader</h2>
+
   <app-post-form
   (onAdd)="updatePosts($event)"
   ></app-post-form>
